# vigil

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Makefile  README.md  bun.test.preload.ts  bunfig.toml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  product-development-plan.md  vitest.config.mts
.github/: dependabot.yml
backend/: .env.example  README.md  pyproject.toml  pyrightconfig.json
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: webhooks.py
backend/app/models/: webhook.py
backend/app/services/: email_content.py  email_repository.py  embeddings.py  groq_client.py  intent_embeddings.py  intent_matcher.py  pipeline.py  supabase_client.py  temporal_scoring.py  user_preferences.py  web_grounding.py
backend/app/services/llm/: __init__.py  base.py  normalize.py  prompting.py  redaction.py  registry.py
backend/app/services/llm/providers/: __init__.py  groq.py  ollama.py  openai_compatible.py
backend/app/worker/: queue.py  runner.py
backend/evals/: README.md  dataset.jsonl  run_eval.py
backend/tests/: test_email_content_meta.py  test_groq_client.py  test_intent_matcher.py  test_llm_prompting.py  test_temporal_scoring.py  test_user_preferences.py  test_webhooks.py  test_worker_runner.py
docker/: api.Dockerfile  web-entrypoint.sh  web.Dockerfile
docs/: README.md  architecture.md  data-and-sync.md  development.md  docker.md  features.md  getting-started.md  milestone3-db-setup.sql
e2e/: smoke.spec.ts
src/: auth.config.ts  (+2 more)
(+72 files in other folders)
