[project]
name = "vigil-api"
version = "0.1.0"
description = "Vigil FastAPI backend (simple layout alongside Next.js)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "groq",
  "httpx>=0.27",
  "sentence-transformers",
  "supabase",
]

[dependency-groups]
dev = [
  "pyright>=1.1.380",
  "pytest>=8.3",
  "ruff>=0.6.9",
]

[project.scripts]
vigil-api = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
